Refactored nav menu items and benefits

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <section class="hero"></section>
-        <section class="content">
+        <section class="nav-menu-content">
             <section id="search-engine-optimization" class="nav-menu-item">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
                 <h2>Search Engine Optimization</h2>
@@ -57,7 +57,7 @@
             </section>
         </section>
         <article class="benefits">
-            <section class="benefit-lead">
+            <section class="benefit-item" id="lead-generation">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" />
                 <p>
@@ -65,7 +65,7 @@
                     directly to your website.
                 </p>
             </section>
-            <section class="benefit-brand">
+            <section class="benefit-item" id="brand-awareness">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" />
                 <p>
@@ -73,7 +73,7 @@
                     visibility for your business.
                 </p>
             </section>
-            <section class="benefit-cost">
+            <section class="benefit-item" id="cost-management">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png"></img>
                 <p>
@@ -84,6 +84,7 @@
         </article>
     </main>
     <footer>
+        <!-- This section is not displayed per mock up specifications -->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2021 Horiseon Social Solution Services, Inc.
