--- a/index.html
+++ b/index.html
@@ -24,11 +24,17 @@
             </ul>
         </nav>
     </header>
+
+    <section>
+        <!-- Jumbotron/Hero section -->
+        <img src="./assets/images/digital-marketing-meeting.jpg" id="meeting-background-image"
+            alt="Several people gathered around a table for a casual office meeting" />
+    </section>
+
     <main>
-        <section class="hero"></section>
         <section class="nav-menu-content">
             <section id="search-engine-optimization" class="nav-menu-item">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+                <img src="./assets/images/search-engine-optimization.jpg" alt="Desk setup with laptop full coffee cup colored pencils, and small notebook with term SEO written on it." class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they
@@ -37,7 +43,7 @@
                 </p>
             </section>
             <section id="online-reputation-management" class="nav-menu-item">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+                <img src="./assets/images/online-reputation-management.jpg" alt="Person sitting at laptop with caption reading reputation" class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -47,7 +53,7 @@
 
             </section>
             <section id="social-media-marketing" class="nav-menu-item">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+                <img src="./assets/images/social-media-marketing.jpg" alt="Six people gathered at a table looking at social media labeled stickers"class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps
@@ -59,7 +65,7 @@
         <article class="benefits">
             <section class="benefit-item" id="lead-generation">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" />
+                <img src="./assets/images/lead-generation.png" alt="Graphic showing how leads funnel down to money" />
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers
                     directly to your website.
@@ -67,7 +73,7 @@
             </section>
             <section class="benefit-item" id="brand-awareness">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png" alt="Graphic showing how finding your site creates new ideas" />
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and
                     visibility for your business.
@@ -75,7 +81,7 @@
             </section>
             <section class="benefit-item" id="cost-management">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png"></img>
+                <img src="./assets/images/cost-management.png" alt="Graphic showing that by using these strategies the cost is less"></img>
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no
                     longer need to advertise your page.
@@ -91,4 +97,5 @@
         </p>
     </footer>
 </body>
+
 </html>
