--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!-- Code refactored by John Mohlenkamp  April 2021    -->
+<!-- Version 1.1                                       -->
+<!-- Changes: Updated titles, added accessibility      -->
+<!--          standardization, refactored style.css    -->
+<!--           created verified Google sitemap         -->
+<!--                                                   -->
+<!-- Future TBD: Footer visibility, contrast ratio     -->
+<!--             Artice/Main alignment, font thickness -->
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Horiseon - An SEO, Reputation Management, and Social Media Marketing Company</title>
 </head>
 
 <body>
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Hori<span title="Horiseon: An SEO, Reputation Management, and Social Media Marketing Company"
+                class="seo">seo</span>n</h1>
         <nav>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization" title="Search Engine Optimization">Search Engine
+                        Optimization</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <a href="#online-reputation-management" title="Online Reputation Management">Online Reputation
+                        Management</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href="#social-media-marketing" title="Social Media Marketing">Social Media Marketing</a>
                 </li>
             </ul>
         </nav>
@@ -27,14 +37,17 @@
 
     <section>
         <!-- Jumbotron/Hero section -->
-        <img src="./assets/images/digital-marketing-meeting.jpg" id="meeting-background-image"
+        <img title="Several people gathered around a table for a casual office meeting"
+            src="./assets/images/digital-marketing-meeting.jpg" id="meeting-background-image"
             alt="Several people gathered around a table for a casual office meeting" />
     </section>
 
     <main>
         <section class="nav-menu-content">
             <section id="search-engine-optimization" class="nav-menu-item">
-                <img src="./assets/images/search-engine-optimization.jpg" alt="Desk setup with laptop full coffee cup colored pencils, and small notebook with term SEO written on it." class="float-left" />
+                <img title="Increase visibility and find customers" src="./assets/images/search-engine-optimization.jpg"
+                    alt="Desk setup with laptop full coffee cup colored pencils, and small notebook with term SEO written on it."
+                    class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they
@@ -43,7 +56,8 @@
                 </p>
             </section>
             <section id="online-reputation-management" class="nav-menu-item">
-                <img src="./assets/images/online-reputation-management.jpg" alt="Person sitting at laptop with caption reading reputation" class="float-right" />
+                <img title="Control what customers see about you" src="./assets/images/online-reputation-management.jpg"
+                    alt="Person sitting at laptop with caption reading reputation" class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -53,7 +67,8 @@
 
             </section>
             <section id="social-media-marketing" class="nav-menu-item">
-                <img src="./assets/images/social-media-marketing.jpg" alt="Six people gathered at a table looking at social media labeled stickers"class="float-left" />
+                <img title="Analyze data to find new leads" src="./assets/images/social-media-marketing.jpg"
+                    alt="Six people gathered at a table looking at social media labeled stickers" class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps
@@ -63,9 +78,12 @@
             </section>
         </section>
         <article class="benefits">
+            <!-- Styling note: The mock up extends the bottom of the benefits box past the main content area
+            This is duplicated in the styling but may need to be revisited -->
             <section class="benefit-item" id="lead-generation">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" alt="Graphic showing how leads funnel down to money" />
+                <img title="Less work, more customers" src="./assets/images/lead-generation.png"
+                    alt="Graphic showing how leads funnel down to money" />
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers
                     directly to your website.
@@ -73,7 +91,8 @@
             </section>
             <section class="benefit-item" id="brand-awareness">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt="Graphic showing how finding your site creates new ideas" />
+                <img title="Increase search ranking and visibility" src="./assets/images/brand-awareness.png"
+                    alt="Graphic showing how finding your site creates new ideas" />
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and
                     visibility for your business.
@@ -81,7 +100,8 @@
             </section>
             <section class="benefit-item" id="cost-management">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="Graphic showing that by using these strategies the cost is less"></img>
+                <img title="Increase your ranking to reduce ad costs" src="./assets/images/cost-management.png"
+                    alt="Graphic showing that by using these strategies the total cost is lower" />
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no
                     longer need to advertise your page.
