Fixed accessiblity problem with class tag

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <section>
         <!-- Jumbotron/Hero section -->
         <img title="Several people gathered around a table for a casual office meeting"
-            src="./assets/images/digital-marketing-meeting.jpg" id="meeting-background-image"
+            src="./assets/images/digital-marketing-meeting.jpg" 
+            id="meeting-background-image"
             alt="Several people gathered around a table for a casual office meeting" />
     </section>
 
@@ -57,7 +58,8 @@
             </section>
             <section id="online-reputation-management" class="nav-menu-item">
                 <img title="Control what customers see about you" src="./assets/images/online-reputation-management.jpg"
-                    alt="Person sitting at laptop with caption reading reputation" class="float-right" />
+                    alt="Person sitting at laptop with caption reading reputation" 
+                    class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -68,7 +70,8 @@
             </section>
             <section id="social-media-marketing" class="nav-menu-item">
                 <img title="Analyze data to find new leads" src="./assets/images/social-media-marketing.jpg"
-                    alt="Six people gathered at a table looking at social media labeled stickers" class="float-left" />
+                    alt="Six people gathered at a table looking at social media labeled stickers" 
+                    class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps
