Added description to meta tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- Future TBD: Footer visibility, contrast ratio     -->
 <!--             Artice/Main alignment, font thickness -->
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" title="Horiseon - An SEO, Reputation Management, and Social Media Marketing Company" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Horiseon - An SEO, Reputation Management, and Social Media Marketing Company</title>
 </head>
