--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization" title="Search Engine Optimization">Search Engine
+                    <a href="#search-engine-optimization" tabindex="0" title="Search Engine Optimization">Search Engine
                         Optimization</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management" title="Online Reputation Management">Online Reputation
+                    <a href="#online-reputation-management" tabindex="0" title="Online Reputation Management">Online Reputation
                         Management</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing" title="Social Media Marketing">Social Media Marketing</a>
+                    <a href="#social-media-marketing" tabindex="0" title="Social Media Marketing">Social Media Marketing</a>
                 </li>
             </ul>
         </nav>
