Updated readme and 1 change to title

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section>
         <!-- Jumbotron/Hero section -->
-        <img title="Several people gathered around a table for a casual office meeting"
+        <img title="Our team will devise the best strategies to fit your needs"
             src="./assets/images/digital-marketing-meeting.jpg" 
             id="meeting-background-image"
             alt="Several people gathered around a table for a casual office meeting" />
